# qsv-easy-windows-installer

./: README.md  index.html  package.json
.github/workflows/: publish.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
